correct spacing on suggested sites

--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@ p {
 .site-button {
   padding: 10px 2px;
   font-size: 20px;
-  margin: 15px 22px;
+  margin: 20px 20px;
   margin-bottom: 0px;
   display: flex;
   flex-direction: column;
